--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,33 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+	
+		<repositories>
+		<repository>
+			<id>nexus</id>
+			<url>http://191.101.152.238:8081/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+
+		<pluginRepository>
+			<id>nexus</id>
+			<url>http://191.101.152.238:8081/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+	</pluginRepositories>
     
     <dependencies>
         
